--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,382 @@
-numpy==1.16.*
-matplotlib==3.*
-seaborn==0.8.1
-pandas
+absl-py                  
+alabaster                
+albumentations           
+altair                   
+astor                    
+astropy                  
+atari-py                 
+atomicwrites             
+attrs                    
+audioread                
+autograd                 
+Babel                    
+backcall                 
+backports.tempfile       
+backports.weakref        
+beautifulsoup4           
+bleach                   
+blis                     
+bokeh                    
+boto                     
+boto3                    
+botocore                 
+Bottleneck               
+branca                   
+bs4                      
+bz2file                  
+cachetools               
+certifi                  
+cffi                     
+chainer                  
+chardet                  
+chart-studio             
+Click                    
+cloudpickle              
+cmake                    
+colorlover               
+community                
+contextlib2              
+convertdate              
+coverage                 
+coveralls                
+crcmod                   
+cufflinks                
+cvxopt                   
+cvxpy                    
+cycler                   
+cymem                    
+Cython                   
+daft                     
+dask                     
+dataclasses              
+datascience              
+decorator                
+defusedxml               
+descartes                
+dill                     
+distributed              
+Django                   
+dlib                     
+dm-sonnet                
+docopt                   
+docutils                 
+dopamine-rl              
+earthengine-api          
+easydict                 
+ecos                     
+editdistance             
+en-core-web-sm           
+entrypoints              
+et-xmlfile               
+fa2                      
+fancyimpute              
+fastai                   
+fastcache                
+fastdtw                  
+fastprogress             
+fastrlock                
+fbprophet                
+feather-format           
+featuretools             
+filelock                 
+fix-yahoo-finance        
+Flask                    
+folium                   
+fsspec                   
+future                   
+gast                     
+GDAL                     
+gdown                    
+gensim                   
+geographiclib            
+geopy                    
+gevent                   
+gin-config               
+glob2                    
+google                   
+google-api-core          
+google-api-python-client 
+google-auth              
+google-auth-httplib2     
+google-auth-oauthlib     
+google-cloud-bigquery    
+google-cloud-core        
+google-cloud-datastore   
+google-cloud-language    
+google-cloud-storage     
+google-cloud-translate   
+google-colab             
+google-pasta             
+google-resumable-media   
+googleapis-common-protos 
+googledrivedownloader    
+graph-nets               
+graphviz                 
+greenlet                 
+grpcio                   
+gspread                  
+gspread-dataframe        
+gunicorn                 
+gym                      
+h5py                     
+HeapDict                 
+holidays                 
+html5lib                 
+httpimport               
+httplib2                 
+humanize                 
+hyperopt                 
+ideep4py                 
+idna                     
+image                    
+imageio                  
+imagesize                
+imbalanced-learn         
+imblearn                 
+imgaug                   
+importlib-metadata       
+imutils                  
+inflect                  
+intel-openmp             
+intervaltree             
+ipykernel                
+ipython                  
+ipython-genutils         
+ipython-sql              
+ipywidgets               
+itsdangerous             
+jax                      
+jaxlib                   
+jdcal                    
+jedi                     
+jieba                    
+Jinja2                   
+jmespath                 
+joblib                   
+jpeg4py                  
+jsonschema               
+jupyter                  
+jupyter-client           
+jupyter-console          
+jupyter-core             
+kaggle                   
+kapre                    
+Keras                    
+Keras-Applications       
+Keras-Preprocessing      
+keras-vis                
+kfac                     
+kiwisolver               
+knnimpute                
+librosa                  
+lightgbm                 
+llvmlite                 
+lmdb                     
+lucid                    
+lunardate                
+lxml                     
+magenta                  
+Markdown                 
+MarkupSafe               
+matplotlib               
+matplotlib-venn          
+mesh-tensorflow          
+mido                     
+mir-eval                 
+missingno                
+mistune                  
+mizani                   
+mkl                      
+mlxtend                  
+more-itertools           
+moviepy                  
+mpi4py                   
+mpmath                   
+msgpack                  
+multiprocess             
+multitasking             
+murmurhash               
+music21                  
+natsort                  
+nbconvert                
+nbformat                 
+networkx                 
+nibabel                  
+nltk                     
+notebook                 
+np-utils                 
+numba                    
+numexpr                  
+numpy                    
+nvidia-ml-py3            
+oauth2client             
+oauthlib                 
+okgrade                  
+olefile                  
+opencv-contrib-python    
+opencv-python            
+openpyxl                 
+opt-einsum               
+osqp                     
+packaging                
+palettable               
+pandas                   
+pandas-datareader        
+pandas-gbq               
+pandas-profiling         
+pandocfilters            
+parso                    
+pathlib                  
+patsy                    
+pexpect                  
+pickleshare              
+Pillow                   
+pip                      
+pip-tools                
+plac                     
+plotly                   
+plotnine                 
+pluggy                   
+portpicker               
+prefetch-generator       
+preshed                  
+pretty-midi              
+prettytable              
+progressbar2             
+prometheus-client        
+promise                  
+prompt-toolkit           
+protobuf                 
+psutil                   
+psycopg2                 
+ptyprocess               
+py                       
+pyarrow                  
+pyasn1                   
+pyasn1-modules           
+pycocotools              
+pycparser                
+pydata-google-auth       
+pydot                    
+pydot-ng                 
+pydotplus                
+PyDrive                  
+pyemd                    
+pyglet                   
+Pygments                 
+pygobject                
+pymc3                    
+PyMeeus                  
+pymongo                  
+pymystem3                
+PyOpenGL                 
+pyparsing                
+pypng                    
+pyrsistent               
+pysndfile                
+PySocks                  
+pystan                   
+pytest                   
+python-apt               
+python-chess             
+python-dateutil          
+python-louvain           
+python-rtmidi            
+python-slugify           
+python-utils             
+pytz                     
+PyWavelets               
+PyYAML                   
+pyzmq                    
+qtconsole                
+requests                 
+requests-oauthlib        
+resampy                  
+retrying                 
+rpy2                     
+rsa                      
+s3fs                     
+s3transfer               
+scikit-image             
+scikit-learn             
+scipy                    
+screen-resolution-extra  
+scs                      
+seaborn                  
+semantic-version         
+Send2Trash               
+setuptools               
+setuptools-git           
+Shapely                  
+simplegeneric            
+six                      
+sklearn                  
+sklearn-pandas           
+smart-open               
+snowballstemmer          
+sortedcontainers         
+spacy                    
+Sphinx                   
+sphinxcontrib-websupport 
+SQLAlchemy               
+sqlparse                 
+srsly                    
+stable-baselines         
+statsmodels              
+sympy                    
+tables                   
+tabulate                 
+tblib                    
+tensor2tensor            
+tensorboard              
+tensorboardcolab         
+tensorflow               
+tensorflow-datasets      
+tensorflow-estimator     
+tensorflow-gan           
+tensorflow-hub           
+tensorflow-metadata      
+tensorflow-privacy       
+tensorflow-probability   
+termcolor                
+terminado                
+testpath                 
+text-unidecode           
+textblob                 
+textgenrnn               
+tflearn                  
+Theano                   
+thinc                    
+toolz                    
+torch                    
+torchsummary             
+torchtext                
+torchvision              
+tornado                  
+tqdm                     
+traitlets                
+tweepy                   
+typing                   
+typing-extensions        
+tzlocal                  
+umap-learn               
+uritemplate              
+urllib3                  
+vega-datasets            
+wasabi                   
+wcwidth                  
+webencodings             
+Werkzeug                 
+wheel                    
+widgetsnbextension       
+wordcloud                
+wrapt                    
+xarray                   
+xgboost                  
+xkit                     
+xlrd                     
+xlwt                     
+yellowbrick              
+zict                     
+zipp                     
+zmq                      
